@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010-2025 Contributors to the openHAB project
+ * Copyright (c) 2010-2026 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.airgradient.internal.communication;
 
-import java.util.Arrays;
 import java.util.List;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -33,61 +32,35 @@ public class PrometheusParserHelper {
         Measure measure = new Measure();
 
         for (PrometheusMetric metric : metrics) {
-            if (metric.getMetricName().equals("pm01")) {
-                measure.pm01 = metric.getValue();
-            } else if (metric.getMetricName().equals("pm02")) {
-                measure.pm02 = metric.getValue();
-            } else if (metric.getMetricName().equals("pm10")) {
-                measure.pm10 = metric.getValue();
-            } else if (metric.getMetricName().equals("rco2")) {
-                measure.rco2 = metric.getValue();
-            } else if (metric.getMetricName().equals("atmp")) {
-                measure.atmp = metric.getValue();
-            } else if (metric.getMetricName().equals("rhum")) {
-                measure.rhum = metric.getValue();
-            } else if (metric.getMetricName().equals("tvoc")) {
-                measure.tvoc = metric.getValue();
-            } else if (metric.getMetricName().equals("nox")) {
-                measure.noxIndex = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_wifi_rssi_dbm")) {
-                measure.wifi = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_co2_ppm")) {
-                measure.rco2 = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_pm1_ugm3")) {
-                measure.pm01 = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_pm2d5_ugm3")) {
-                measure.pm02 = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_pm10_ugm3")) {
-                measure.pm10 = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_pm0d3_p100ml")) {
-                measure.pm003Count = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_tvoc_index")) {
-                measure.tvoc = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_tvoc_raw_index")) {
-                measure.tvocIndex = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_nox_index")) {
-                measure.noxIndex = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_temperature_degc")) {
-                measure.atmp = metric.getValue();
-            } else if (metric.getMetricName().equals("airgradient_humidity_percent")) {
-                measure.rhum = metric.getValue();
+            switch (metric.getMetricName()) {
+                case "pm01", "airgradient_pm1_ugm3" -> measure.pm01 = metric.getValue();
+                case "pm02", "airgradient_pm2d5_ugm3" -> measure.pm02 = metric.getValue();
+                case "pm10", "airgradient_pm10_ugm3" -> measure.pm10 = metric.getValue();
+                case "rco2", "airgradient_co2_ppm" -> measure.rco2 = metric.getValue();
+                case "atmp", "airgradient_temperature_degc" -> measure.atmp = metric.getValue();
+                case "rhum", "airgradient_humidity_percent" -> measure.rhum = metric.getValue();
+                case "tvoc", "airgradient_tvoc_index" -> measure.tvoc = metric.getValue();
+                case "airgradient_tvoc_raw_index" -> measure.tvocIndex = metric.getValue();
+                case "nox", "airgradient_nox_index" -> measure.noxIndex = metric.getValue();
+                case "airgradient_pm0d3_p100ml" -> measure.pm003Count = metric.getValue();
+                case "airgradient_wifi_rssi_dbm" -> measure.wifi = metric.getValue();
             }
 
-            if (metric.getLabels().containsKey("id")) {
-                String id = metric.getLabels().get("id");
+            String id = metric.getLabels().get("id");
+            if (id != null) {
                 measure.serialno = id;
                 measure.locationId = id;
                 measure.locationName = id;
             }
 
-            if (metric.getLabels().containsKey("airgradient_serial_number")) {
-                String id = metric.getLabels().get("airgradient_serial_number");
-                measure.serialno = id;
-                measure.locationId = id;
-                measure.locationName = id;
+            String serialNumber = metric.getLabels().get("airgradient_serial_number");
+            if (serialNumber != null) {
+                measure.serialno = serialNumber;
+                measure.locationId = serialNumber;
+                measure.locationName = serialNumber;
             }
         }
 
-        return Arrays.asList(measure);
+        return List.of(measure);
     }
 }
